Fixed Some bug