@@ -1,6 +1,6 @@
 package com.site.utils;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
@@ -85,8 +85,8 @@ public class FileUtils {
         }
 
         // 对字节数组Base64编码并且返回
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(fileData);
+        Base64.Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(fileData);
     }
 
 }
